# Task_1

./: CMakeLists.txt  README.md  main.c
data/: data_structs.txt
include/: average.h  struct.h  upload.h
source/: average.c  struct.c  upload.c
tests/: average.cpp  struct.cpp  upload.cpp
